# command

./: CMakeLists.txt  main.cpp
src/core/: eventfilter.cpp  eventfilter.h  interactionsrecorder.cpp  interactionsrecorder.h
src/core/commands/: imacrocommand.h  keyboardkeypresscommand.cpp  keyboardkeypresscommand.h  mouseclickcommand.cpp  mouseclickcommand.h  mousemovecommand.cpp  mousemovecommand.h
src/core/serialization/: iscriptserializer.h  textscriptserializer.cpp  textscriptserializer.h
src/core/serialization/visitors/: icommandvisitor.h  textsavevisitor.cpp  textsavevisitor.h
src/ui/: clickcanvaswidget.cpp  clickcanvaswidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
